changed api parameter from 'paints' to 'results'.